--- a/Web Pages Sem 5/ArmstrongNumber.html
+++ b/Web Pages Sem 5/ArmstrongNumber.html
@@ -13,9 +13,9 @@
                 num = parseInt(num / 10);
             }
             if (OriginalNum == sum) {
-                document.write(OriginalNum + "<b> is a Armstrong Number");
+                document.write(OriginalNum + "<b> is an Armstrong Number");
             } else {
-                document.write(OriginalNum + "<b> is not a Armstrong Number");
+                document.write(OriginalNum + "<b> is not an Armstrong Number");
             }
         }
     </script>
