--- a/Web Pages Sem 5/StrongNum.html
+++ b/Web Pages Sem 5/StrongNum.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Strong Number Check</title>
+    <title>Strong Number</title>
     <script>
         function f() {
             var num = parseInt(document.getElementById("strong").value);
@@ -37,4 +37,5 @@
     <br>
     <input type="button" value="Check" onclick="f()">
 </body>
+
 </html>
