--- a/Web Pages Sem 5/PrimeCheck.html
+++ b/Web Pages Sem 5/PrimeCheck.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime</title>
     <script>
         function f() {
@@ -19,7 +14,6 @@
         }
     </script>
 </head>
-
 <body>
     <input type="text" id="prime" placeholder="Enter a number">
     <br>
